# macmac

./: .containerignore  .dockerignore  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .syft.yaml  .trivy.yaml  .trivyignore  CHANGELOG.md  Containerfile  Containerfile.enricher  DESIGN.md  Dockerfile  Makefile  README.md  config.yaml  package-lock.json  podman-compose-dev.yaml  podman-compose.yaml  pyproject.toml  pytest.ini  requirements-auth.txt  requirements-base.txt  requirements-crawler.txt  requirements-db.txt  requirements-dev.txt  requirements-enricher.txt  requirements-lint.txt  requirements-test.txt  requirements.txt
.github/: SLSA_L3_REQUIREMENTS.md  conforma-ec.sha256  dependabot.yml
.github/workflows/: build-and-push.yaml  frontend.yaml  pr-security-checks.yaml  test.yaml  vulnerability-monitoring.yaml
deploy/enricher-remote/: .gitignore  README.md  inventory.example.ini  playbook.yml
deploy/ovh-k3s-host/: .gitignore  README.md  inventory.example.ini  playbook.yml  requirements.yml
frontend/: .dockerignore  .eslintrc.cjs  Containerfile  Dockerfile  README.md  eslint.config.js  index.html  nginx-openshift.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  lcov.info
frontend/src/: App.test.tsx  App.tsx  index.css
scripts/: README.md  clear_fake_data.sh  generate_fake_data.sh  pre-commit-scan.sh  recipe-test.sh  test_full_auth_flow.sh  verify-base-images.sh  verify-image.sh  verify-packages.py
services/: config.py
services/auth/: crud.py  db.py  main.py  models.py  security.py
services/catalog/: crud.py  db.py  main.py  models.py
services/framework/: app.py  auth_tracing.py  helpers.py  logging.py  rate_limit.py  tracing.py  user_context.py  utils.py
services/gateway/: auth_middleware.py  main.py  middleware.py  worker.py
services/meal_plans/: alembic.ini  crud.py  db.py  main.py  models.py  my_list_crud.py
services/recipes/: alembic.ini  crud.py  db.py  db_production.py  dependencies.py  main.py  models.py
services/shared/: constant.py
tests/: conftest.py  test_auth_groups.py  test_auth_invitations.py  test_auth_tracing.py  test_authorization.py  test_cache_serialization.py  test_catalog_crud.py  test_catalog_taxonomy.py  test_catalog_unit_price.py  test_config.py  test_crawler_xml_fetcher.py  test_enricher.py  test_enricher_url_extraction.py  test_framework.py  test_framework_helpers.py  test_framework_utils.py  test_gateway_middleware.py  test_gateway_worker.py  test_http_client.py  test_meal_plans_crud.py  test_messaging.py  test_my_list_crud.py  test_recategorize.py  test_recipes_crud.py  test_requeue_stale.py  test_snitch.py  test_svg_sanitizer.py  test_units.py  test_url_validator.py
tests/integration/: conftest.py  test_catalog_api.py  (+3 more)
(+417 files in other folders)
