[project]
name = "macmac"
version = "0.2.11"
description = "MacMac meal planning platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3,<1",
    "uvicorn>=0.49.0,<1",
    "gunicorn>=26.0.0,<27",
    "pydantic>=2.13.4,<3",
    "python-dotenv>=1.2.2,<2",
    "python-multipart>=0.0.32,<1",
    "PyJWT>=2.13.0,<3",
    "httpx>=0.28.1,<1",
    "PyYAML>=6.0.3,<7",
    "click>=8.4.1,<9",
    "email-validator>=2.3.0,<3",
    "defusedxml>=0.7.1,<1",
]

[project.optional-dependencies]
db = [
    "SQLAlchemy>=2.0.51,<3",
    "alembic>=1.18.4,<2",
    "pg8000>=1.30.0,<2",
]
cache = [
    "redis>=8.0.0,<9",
]
messaging = [
    "pika>=1.4.1,<2",
]
auth = [
    "firebase-admin>=7.4.0,<8",
]
enricher = [
    "openai>=2.43.0,<3",
    "playwright>=1.60.0,<2",
    "beautifulsoup4>=4.15.0,<5",
]
crawler = [
    "playwright>=1.60.0,<2",
]
lint = [
    "ruff>=0.15.17",
    "mypy>=2.1.0,<3",
]
test = [
    "macmac[cache,messaging,db]",
    "pytest>=9.1.0,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pytest-timeout>=2.4.0,<3",
]
dev = [
    "macmac[cache,messaging,db,auth,enricher,crawler,test,lint]",
]

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "rhtl"
url = "https://packages.redhat.com/trusted-libraries/python"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
